# spsp2dmp-parser

./: CMakeLists.txt  README.md
src/: main.c
